frontend/tests/cases/negative/security/levelApprox.gr.output
Type checking failed: 
Grading error: frontend/tests/cases/negative/security/levelApprox.gr:3:1:
Public is not approximatable by Private for type Sec